# nuxt-tauri-starter

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
.claude/: launch.json
.github/workflows/: README.md  build.yml  release.yml
app/: app.vue
app/assets/css/: main.css
app/components/: AppButton.vue  AppIcon.vue  IconBadge.vue  PageHeader.vue  SettingsGroup.vue  SettingsRow.vue  ToggleSwitch.vue
app/composables/: useBarcodeScanner.ts  useDocumentStorage.ts  useFileSystem.ts  useNotification.ts  usePrint.ts  useUpdater.ts  useWindow.ts
app/layouts/: default.vue
app/pages/: demo.vue  filesystem.vue  index.vue  notifications.vue  print.vue  scanner.vue  updater.vue  window.vue
app/types/: storage.ts
app/utils/: storageRegistry.ts
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/migrations/2026-05-14-000001_create_documents/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/core/: db.rs  errors.rs  mod.rs  state.rs
src-tauri/src/features/storage/: commands.rs  entities.rs  manager.rs  mod.rs  persistence.rs  repository.rs
