[package]
name = "nuxt-tauri-starter"
version = "1.0.0"
description = "A production-ready starter for building cross-platform desktop applications with Nuxt 4 and Tauri 2"
authors = ["Wailan Tirajoh <wailantirajoh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nuxt_tauri_starter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
validator = { version = "0.18", features = ["derive"] }
anyhow = "1.0"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.14"

